--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,7 @@ production:
   database: news_app_production
   username: news_app
   password: <%= ENV["NEWS_APP_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  encoding: utf8
+  host: database-1.c8upgyxnmrxo.ap-northeast-1.rds.amazonaws.com
+  port: 5432
