--- a/config/database.yml
+++ b/config/database.yml
@@ -82,7 +82,7 @@ test:
 production:
   <<: *default
   database: news_app_production
-  username: news_app
+  username: postgres
   password: <%= ENV["NEWS_APP_DATABASE_PASSWORD"] %>
   adapter: postgresql
   encoding: utf8
